1.0 [Search] UI: words get cut off at bottom at Title : Fixed.

--- a/src/main/java/org/ednovo/gooru/client/mvp/search/collection/CollectionSearchResult.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/search/collection/CollectionSearchResult.css
@@ -18,7 +18,7 @@
     color: #1076BB;
     font-size: 16px;
     font-weight: bold;
-    height: 16px;
+    height: 19px;
     margin-bottom: 3px;
     overflow: hidden;
     cursor: pointer;
